--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,31 @@
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background-color: #c8cdd2; /* Customize the thumb color */
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #8b8d8f; /* Customize the thumb color on hover */
+}
+
+/* Track when scrollbar is in 'dragging' state */
+::-webkit-scrollbar-thumb:active {
+  background-color: #285e9a; /* Customize the thumb color when dragging */
+}
+
+/* Track background */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Customize the track color */
+}
+
 @layer components {
   .max-container {
     max-width: 1440px;
